# zomboid-mods-updater

./: README.md  pyproject.toml
app/core/: manifest.py  uploader.py
app/core/utils/: hashing.py  mods.py  network.py  utils.py
