[project]
name = "zomboid-mods-updater"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "checksumdir>=1.3.0",
    "click>=8.2.1",
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "pydrive2>=1.21.3",
    "pyinstaller>=6.15.0",
    "requests>=2.32.5",
    "xxhash>=3.5.0",
]
